--- a/contrib/translations/tr/tr_TR.lng
+++ b/contrib/translations/tr/tr_TR.lng
@@ -923,6 +923,10 @@ yapar.
 %c sürücüsünden önyükleme yapılamıyor.
 
 .
+:PROGRAM_BOOT_IMAGE_MOUNTED
+Floppy image(s) already mounted.
+
+.
 :PROGRAM_BOOT_IMAGE_OPEN
 Kalıp dosyası açılıyor: %s
 
@@ -939,6 +943,9 @@ Kullanılabilir PCjr kartuş komutları: %s
 .
 :PROGRAM_BOOT_CART_NO_CMDS
 Bir PCjr kartuş komutu bulunamadı
+.
+:PROGRAM_BOOT_BOOTING
+Booting from drive 
 .
 :PROGRAM_LOADROM_HELP
 Carga el archivo de imagen ROM especificado para BIOS de video o IBM BASIC.
@@ -1201,6 +1208,10 @@ Kalıp dosyası için yeterli boş alan yok. %llu bayt daha gerekli.
 
 Disket okunamıyor.
 .
+:PROGRAM_IMGMAKE_BADSIZE
+Wrong -size or -chs arguments.
+
+.
 :PROGRAM_KEYB_INFO
 %i kod sayfası yüklendi
 
@@ -1247,6 +1258,37 @@ Klavye dosyası %s geçersiz
 :PROGRAM_KEYB_INVCPFILE
 %s dizilimi için geçersiz veya olmayan kod sayfası dosyası
 
+
+.
+:INT21_6523_YESNO_CHARS
+yn
+.
+:PROGRAM_LABEL_HELP
+Creates, changes, or deletes the volume label of a drive.
+
+LABEL [drive:][label]
+
+  [drive:]○Specifies the drive letter
+  [label]○Specifies the volume label
+
+.
+:PROGRAM_LABEL_DELETE
+Delete the volume label (Y/N)? 
+.
+:PROGRAM_LABEL_TOOLONG
+Label is too long (more than 11 characters).
+
+.
+:PROGRAM_LABEL_BADCHARS
+Label has invalid characters.
+
+.
+:PROGRAM_LABEL_VOLUMEIS
+Volume in drive %c is %s
+
+.
+:PROGRAM_LABEL_NOLABEL
+Volume in drive %c has no label
 
 .
 :PROGRAM_MODE_USAGE
@@ -1514,6 +1556,12 @@ Dizin oluşturulamıyor - %s
 Geçersiz yol, dizin değil veya dizin boş değil - %s
 
 .
+:SHELL_CMD_RMDIR_FULLTREE_CONFIRM
+Delete directory "%s" and all its subdirectories? (Y/N)?
+.
+:SHELL_CMD_RMDIR_SINGLE_CONFIRM
+Delete file "%s" (Y/N)?
+.
 :SHELL_CMD_RENAME_ERROR
 Yeniden adlandırılamıyor - %s
 
@@ -1529,6 +1577,9 @@ Yeniden adlandırılamıyor - %s
 :SHELL_CMD_DEL_ERROR
 Silinemiyor - %s
 
+.
+:SHELL_CMD_DEL_CONFIRM
+Delete %s (Y/N)?
 .
 :SHELL_CMD_DEL_SURE
 Dizindeki tüm dosyalar silinecek!
@@ -1650,6 +1701,10 @@ Yetersiz disk alanı - %s
 Kopyalama hatası - %s
 
 .
+:SHELL_CMD_COPY_NOSELF
+File cannot be copied onto itself♪
+
+.
 :SHELL_CMD_SUBST_DRIVE_LIST
 Şu anda bağlı yerel sürücüler:
 
@@ -1681,6 +1736,9 @@ DOS/V V-text şu anda etkin.
 :SHELL_CMD_VTEXT_OFF
 DOS/V V-text şu anda devre dışı.
 
+.
+:SHELL_ALLFILES_CHAR
+a
 .
 :SHELL_STARTUP_TITLE
 DOSBox-X'e hoş geldiniz!
@@ -2588,6 +2646,18 @@ orijinal oran
 :MENU:video_ratio_set
 Oranı ayarla
 .
+:MENU:VideoPreventCaptureMenu
+Screen capture control
+.
+:MENU:prevcap_none
+Allow
+.
+:MENU:prevcap_blank
+Show as blank
+.
+:MENU:prevcap_invisible
+Make invisible
+.
 :MENU:VideoScalerMenu
 Ölçekleyici
 .
@@ -2677,6 +2747,9 @@ xBRZ
 .
 :MENU:scaler_set_xbrz_bilinear
 xBRZ İkidoğrulu
+.
+:MENU:center_window
+Center window
 .
 :MENU:set_titletext
 Başlık çubuğu metnini ayarla...
@@ -3161,6 +3234,9 @@ DOSBox-X hakkında
 :MENU:show_console
 Günlükleme konsolunu göster
 .
+:MENU:clear_console
+Clear logging console
+.
 :MENU:disable_logging
 Günlük çıkışını devre dışı bırak
 .
@@ -3184,6 +3260,9 @@ Hata ayıklayıcı seçeneğil: Normal kipte çalış
 .
 :MENU:debugger_runwatch
 Hata ayıklayıcı seçeneğil: İzlemeyi çalıştır
+.
+:MENU:video_debug_overlay
+Video debug overlay
 .
 :MENU:HelpCommandMenu
 DOS komutları
@@ -3266,11 +3345,17 @@ MIDI çıktısı kaydet
 :MENU:mapper_caprawopl
 FM (OPL) çıktısı kaydet
 .
+:MENU:mapper_capnetrf
+Record network traffic
+.
 :MENU:mapper_video
 Videoyu AVI olarak kaydet
 .
 :MENU:mapper_scrshot
 Ekran görüntüsü al
+.
+:MENU:mapper_rawscrshot
+Take raw screenshot
 .
 :MENU:mapper_volup
 Ses düzeyini artır
@@ -3520,6 +3605,9 @@ IDE disk veya CD durumunu göster
 .
 :MENU:pc98_use_uskb
 ABD klavye dizilimi kullan
+.
+:MAPPER:capnetrf
+Record Network traffic
 .
 :MAPPER:caprawopl
 FM/OPL çıktısı kaydet
